elastic/openvpn/ingress-openvpn.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openvpn-ingress
  namespace: kube-system 
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
  - host: 34.84.129.210
    http:
      paths:
      - backend:
          service:
            name: openvpn
            port:
              number: 443
        path: /
        pathType: Prefix
  ports:
  - port: 1194
    targetPort: 443
    protocol: TCP
